--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movies-and-series",
+  "name": "cine-y-series",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,12 +16,14 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "formik": "^2.4.2",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.3",
     "sharp": "^0.32.1",
     "swiper": "^9.4.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "yup": "^1.2.0"
   }
 }
