--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-select": "^5.7.3",
     "sharp": "^0.32.1",
+    "sweetalert2": "^11.7.12",
     "swiper": "^9.4.1",
     "typescript": "5.0.4",
     "yup": "^1.2.0"
