--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,13 @@
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "cookies-next": "^2.1.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "formik": "^2.4.2",
     "next": "13.4.1",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-select": "^5.7.3",
     "sharp": "^0.32.1",
