--- a/client/package.json
+++ b/client/package.json
@@ -10,23 +10,24 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.29.7",
-    "@tanstack/react-query-devtools": "^4.29.7",
-    "@types/node": "20.1.3",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
     "cookies-next": "^2.1.2",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1",
     "formik": "^2.4.2",
     "next": "13.4.1",
     "react": "18.2.0",
-    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-select": "^5.7.3",
     "sharp": "^0.32.1",
     "sweetalert2": "^11.7.12",
     "swiper": "^9.4.1",
-    "typescript": "5.0.4",
     "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.29.19",
+    "@types/node": "^20.3.3",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "^13.4.8",
+    "typescript": "^5.1.6"
   }
 }
